Fix navbar alignment

--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -13,10 +13,11 @@ header {
   }
 }
 
-.left_nav {
+.left-nav {
   float: left;
+  display: inline;
 }
 
-.right_nav {
+.right-nav {
   float: right;
 }
